<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/cardView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow_center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tViewTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/comentario"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/textsize_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_customgreen_br30_b0"
            android:paddingLeft="@dimen/padding_buttons"
            android:paddingRight="@dimen/padding_buttons"
            android:text="@string/aceptar"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="@dimen/textsize_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/eTextComent"
            app:layout_constraintTop_toBottomOf="@+id/eTextComent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_redaccent700_br30_b0"
            android:paddingLeft="@dimen/padding_buttons"
            android:paddingRight="@dimen/padding_buttons"
            android:text="@string/cancelar"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="@dimen/textsize_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/eTextComent" />

        <EditText
            android:id="@+id/eTextComent"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_none_bgrey600_br0_b1"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/texthint_escribecomentario"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="1"
            android:padding="10dp"
            android:singleLine="false"
            android:textSize="@dimen/textsize_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tViewTitulo"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twoPoints"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/textsize_primary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tViewTitulo"
            app:layout_constraintStart_toEndOf="@+id/tViewTitulo"
            app:layout_constraintTop_toTopOf="@+id/tViewTitulo" />


    </androidx.constraintlayout.widget.ConstraintLayout>









</androidx.constraintlayout.widget.ConstraintLayout>
